[tool.poetry]
name = "frida-ios-syscall-tracer"
version = "0.1.0"
description = ""
authors = ["4masaka <in9lude@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
frida = "^12.8.20"
frida-tools = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
